--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,483 @@
+.blog-banner {
+  padding: 140px 0;
+  margin-bottom: 0;
+}
+.posts {
+  background-color: #f1f1f1;
+  padding: 50px 0;
+}
+.post-tile {
+  height: 500px;
+  width: 100%;
+  background-color: #ccc;
+  margin-left: 22px;
+  margin-bottom: 22px;
+  float: left;
+  border-radius: 3px;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+}
+.post-tile:first-child {
+  margin-left: 0;
+}
+.post-tile.blog {
+  background-color: #0081b7;
+}
+.post-tile.blog .category-icon {
+  background-position: center -260px;
+}
+.post-tile.other {
+  background-color: #3bc5f6;
+}
+.post-tile.other .category-icon {
+  background-position: center -860px;
+}
+.post-tile.updates {
+  background-color: #00d7cc;
+}
+.post-tile.updates .category-icon {
+  background-position: center -1460px;
+}
+.post-tile.opensource {
+  background-color: #0081b7;
+}
+.post-tile.opensource .category-icon {
+  background-position: center -2060px;
+}
+.post-tile.product {
+  background-color: #8144dc;
+}
+.post-tile.product .category-icon {
+  background-position: center -2660px;
+}
+.post-tile.engineering {
+  background-color: #d35ea3;
+}
+.post-tile.engineering .category-icon {
+  background-position: center -3260px;
+}
+.post-tile.customer-success {
+  background-color: #ea5452;
+}
+.post-tile.customer-success .category-icon {
+  background-position: center -3860px;
+}
+.post-tile.business {
+  background-color: #ffbc00;
+}
+.post-tile.business .category-icon {
+  background-position: center -4460px;
+}
+.post-tile.highlight {
+  color: #fff;
+}
+.post-tile.highlight .post-text {
+  background-color: transparent;
+  border: 0;
+}
+.post-tile.highlight .post-text h2,
+.post-tile.highlight .post-text p,
+.post-tile.highlight .post-text .category {
+  color: #fff;
+}
+.post-tile.highlight .post-text .auth0r span,
+.post-tile.highlight .post-text .auth0r .by {
+  color: #fff;
+}
+.post-tile.highlight.blog {
+  background-color: #0081b7;
+}
+.post-tile.highlight.blog .category-icon {
+  background-position: center -150px;
+}
+.post-tile.highlight.other {
+  background-color: #3bc5f6;
+}
+.post-tile.highlight.other .category-icon {
+  background-position: center -750px;
+}
+.post-tile.highlight.updates {
+  background-color: #00d7cc;
+}
+.post-tile.highlight.updates .category-icon {
+  background-position: center -1350px;
+}
+.post-tile.highlight.opensource {
+  background-color: #0081b7;
+}
+.post-tile.highlight.opensource .category-icon {
+  background-position: center -1950px;
+}
+.post-tile.highlight.product {
+  background-color: #8144dc;
+}
+.post-tile.highlight.product .category-icon {
+  background-position: center -2550px;
+}
+.post-tile.highlight.engineering {
+  background-color: #d35ea3;
+}
+.post-tile.highlight.engineering .category-icon {
+  background-position: center -3150px;
+}
+.post-tile.highlight.customer-success {
+  background-color: #ea5452;
+}
+.post-tile.highlight.customer-success .category-icon {
+  background-position: center -3750px;
+}
+.post-tile.highlight.business {
+  background-color: #ffbc00;
+}
+.post-tile.highlight.business .category-icon {
+  background-position: center -4350px;
+}
+.post-tile.custom .category-icon {
+  background-position: center;
+  background-size: cover;
+}
+.post-tile .category-icon {
+  width: 100%;
+  height: 200px;
+  margin: 0 auto;
+  background-image: url("../img/post-categories-sprite.png");
+  background-repeat: no-repeat;
+  background-size: 600px auto;
+}
+.post-tile .category-icon .overlay {
+  display: block;
+  height: 200px;
+  background-color: rgba(0,0,0,0.3);
+}
+.post-tile .post-text {
+  background-color: #fff;
+  overflow: hidden;
+  height: 300px;
+  position: relative;
+}
+.post-tile .post-text h2 {
+  color: #000;
+  margin: 5px 20px;
+  font-size: 25px;
+  font-weight: lighter;
+  line-height: 1.2;
+  font-weight: bold;
+}
+.post-tile .post-text p {
+  margin: 10px 20px;
+  font-size: 14px;
+  max-height: 94px;
+  overflow: hidden;
+}
+.post-tile .post-text .category {
+  display: block;
+  margin: 15px 20px;
+  margin-bottom: 0;
+  font-size: 12px;
+  font-weight: bold;
+  color: #5d676f;
+}
+.post-tile .post-text .auth0r {
+  font-style: italic;
+  font-size: 12px;
+  overflow: hidden;
+  width: 250px;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+.post-tile .post-text .auth0r a {
+  color: inherit;
+}
+.post-tile .post-text .auth0r img {
+  width: 40px;
+  height: 40px;
+  background-color: #000;
+  border-radius: 400px;
+  float: left;
+}
+.post-tile .post-text .auth0r span {
+  float: left;
+  clear: right;
+  margin-left: 10px;
+  color: #808080;
+}
+.post-tile .post-text .auth0r span.by {
+  margin-top: 4px;
+  color: #000;
+}
+.post-overlay {
+  background-color: rgba(0,0,0,0.8);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  display: none;
+  overflow-y: scroll;
+}
+.post-overlay .blog-post {
+  margin: 50px 0;
+  min-height: 400px;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+.post-overlay .blog-post .post-spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -20px;
+  margin-left: -20px;
+  animation: spin 2s;
+  animation-iteration-count: infinite;
+  -webkit-animation: spin 2s;
+  -webkit-animation-iteration-count: infinite;
+}
+.post-overlay .nav {
+  height: 60px;
+  line-height: 60px;
+  font-size: 14px;
+  text-decoration: none;
+  position: relative;
+}
+.post-overlay .nav .grid {
+  position: absolute;
+  left: 50%;
+  font-size: 24px;
+  width: 46px;
+  margin-top: 3px;
+  margin-left: -22px;
+  padding: 0 10px;
+}
+.post-overlay .nav a {
+  color: #000;
+}
+.post-overlay .nav a .icon {
+  font-size: 24px;
+  margin-top: 2px;
+}
+.post-overlay .nav .next,
+.post-overlay .nav .prev {
+  height: 60px;
+  max-width: 45%;
+  overflow: hidden;
+}
+.post-overlay .nav .prev {
+  float: left;
+  padding-left: 20px;
+}
+.post-overlay .nav .prev .icon {
+  float: left;
+  margin-right: 10px;
+}
+.post-overlay .nav .next {
+  float: right;
+  padding-right: 20px;
+}
+.post-overlay .nav .next .icon {
+  float: right;
+  margin-left: 10px;
+}
+.post-overlay .post-header {
+  min-height: 300px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.post-overlay .post-header .category-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/post-categories-sprite.png");
+  background-repeat: no-repeat;
+  background-size: 800px auto;
+  opacity: 0.2;
+  z-index: 0;
+}
+.post-overlay .post-header .post-category {
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
+  z-index: 100;
+  position: relative;
+}
+.post-overlay .post-header h1 {
+  font-size: 50px;
+  margin: 50px;
+  font-weight: lighter;
+  text-align: center;
+  position: relative;
+}
+.post-overlay .post-header .auth0r {
+  font-size: 14px;
+  overflow: hidden;
+  width: 250px;
+  margin: 40px auto;
+  text-align: center;
+}
+.post-overlay .post-header .auth0r a {
+  color: inherit;
+}
+.post-overlay .post-header .auth0r img {
+  width: 40px;
+  height: 40px;
+  background-color: #000;
+  border-radius: 400px;
+  display: block;
+  margin: 10px auto;
+}
+.post-overlay .post-header .auth0r span {
+  color: #333;
+  width: 100%;
+  display: block;
+}
+.post-overlay .post-header .auth0r span.by {
+  color: #000;
+  font-size: 20px;
+}
+.post-overlay .post-header.blog {
+  background-color: #0081b7;
+}
+.post-overlay .post-header.blog .category-bg {
+  background-position: center -220px;
+}
+.post-overlay .post-header.other {
+  background-color: #3bc5f6;
+}
+.post-overlay .post-header.other .category-bg {
+  background-position: center -1020px;
+}
+.post-overlay .post-header.updates {
+  background-color: #00d7cc;
+}
+.post-overlay .post-header.updates .category-bg {
+  background-position: center -1820px;
+}
+.post-overlay .post-header.opensource {
+  background-color: #0081b7;
+}
+.post-overlay .post-header.opensource .category-bg {
+  background-position: center -2620px;
+}
+.post-overlay .post-header.product {
+  background-color: #8144dc;
+}
+.post-overlay .post-header.product .category-bg {
+  background-position: center -3420px;
+}
+.post-overlay .post-header.engineering {
+  background-color: #d35ea3;
+}
+.post-overlay .post-header.engineering .category-bg {
+  background-position: center -4220px;
+}
+.post-overlay .post-header.customer-success {
+  background-color: #ea5452;
+}
+.post-overlay .post-header.customer-success .category-bg {
+  background-position: center -5020px;
+}
+.post-overlay .post-header.business {
+  background-color: #ffbc00;
+}
+.post-overlay .post-header.business .category-bg {
+  background-position: center -5820px;
+}
+.post-overlay .post-featured-img {
+  width: 100%;
+  height: auto;
+}
+.post-overlay .post-body {
+  min-height: 500px;
+  border-bottom: 1px solid #ccc;
+}
+.post-overlay .post-body .post-content {
+  width: 60%;
+  margin: 50px auto;
+}
+.post-overlay .post-body .post-content img {
+  max-width: 100%;
+}
+.post-overlay .post-comments {
+  background-color: #f1f1f1;
+  width: 100%;
+  overflow: hidden;
+}
+.post-overlay .post-comments .disqus-container {
+  width: 600px;
+  margin: 20px auto;
+  background-color: #fff;
+  border: 5px solid #dce4eb;
+  min-height: 400px;
+  border-radius: 10px;
+  padding: 10px 20px;
+}
+@media (max-width: 991px) {
+  .post-overlay .container {
+    padding: 0;
+  }
+  .post-overlay .blog-post {
+    margin: 0;
+    border-radius: 0;
+  }
+  .post-overlay .blog-post h1 {
+    font-size: 60px;
+    margin: 20px;
+  }
+  .post-overlay .blog-post .nav .text {
+    display: none;
+  }
+  .post-overlay .blog-post .post-body .post-content {
+    width: 90%;
+  }
+  .post-overlay .post-comments {
+    display: none;
+  }
+}
+@-webkit-keyframes spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(359deg);
+  }
+}
+@-moz-keyframes spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(359deg);
+  }
+}
+@-webkit-keyframes spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(359deg);
+  }
+}
+@-o-keyframes spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(359deg);
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(359deg);
+  }
+}
 @media screen and (min-width: 990px) {
   .header-dark header.site-header h1.navbar-brand a {
     background-image: url("https://auth0.com/auth0-styleguide/img/logo-grey-horizontal.png");
